SCMNEW-150 rsa decrypt custom input field and add version in path